Fix: contrast on input fields

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1434,6 +1434,9 @@ h3.titulo-destaque
     .category-#{$category}
       background-color: darken(#fff, 85%)
 
+  #login-panel
+    input
+      color: #000
 
 // ------------------------------------
 // 10 - mobile
